welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: not found: value setMondeCouleur
			setMondeCouleur(T(i-1));
                        ^